--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,7 @@ body, #root{
   background-color: transparent;
   color: whitesmoke;
 }
+img{
+  object-fit: contain;
+  object-position: right;
+}
